src/objects/MX_RTE_Dependencia__c.object
<CustomObject>
    <description>Objeto que sirve para capturar las dependencias y asociarlas a iniciativas</description>
    <fields>
        <fullName>IMX_RTE_niciativa__c</fullName>
        <description>Campo para relacionar con una iniciativa</description>
        <label>Iniciativa</label>
        <referenceTo>MX_RTE_Iniciativa__c</referenceTo>
        <relationshipLabel>Dependencias</relationshipLabel>
        <relationshipName>Dependencias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Area_De_Apoyo__c</fullName>
        <description>Campo para capturar el área de apoyo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Area de Apoyo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Area_Nom_Coloquial__c</fullName>
        <description>Campo para capturar el nombre del área</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Área (Nombre Coloquial)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Contacto_Interno__c</fullName>
        <description>Campo para capturar al contacto interno</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contacto Interno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel_de_servicio__c</fullName>
        <description>Campo para capturar nivel de servicio</description>
        <label>Nivel de servicio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dependencia</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Dependencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>